# console-snake

./: CMakeLists.txt  GameMode.h  main.cpp
core/: GameLoop.cpp  GameLoop.h  StateMachine.cpp  StateMachine.h
gameplay/: Food.cpp  Food.h  Snake.cpp  Snake.h
persistence/: SaveSystem.cpp  SaveSystem.h
systems/: InputSystem.cpp  InputSystem.h  RenderSystem.cpp  RenderSystem.h  TimeSystem.cpp  TimeSystem.h
